--- a/Training/cheatsheet.html
+++ b/Training/cheatsheet.html
@@ -4,7 +4,8 @@
 <!-- Table of contents -->
 <h2 id="Top" style="padding-top: 20px;">Hulpmiddelen</h2>
 <ul>
-    <li><a href="#Buttons">Buttons</a></li>
+    <li><a href="#Button_sizing">Buttons: grootte</a></li>
+    <li><a href="#Button_styling">Buttons: styling</a></li>
     <li><a href="#Icons">Icons</a></li>
     <li><a href="#Links">Links</a></li>
     <li><a href="#Anchor">Anchor links</a></li>
@@ -17,7 +18,7 @@
         <!-- Buttons -->
         <tr style="border-bottom: 1px solid #ccc; vertical-align: top;">
             <td colspan="2">
-                <h2 id="Buttons" style="padding-top: 20px;">Buttons</h2>
+                <h2 id="Button_sizing" style="padding-top: 20px;">Buttons: grootte</h2>
             </td>
         </tr>
         <tr style="border-bottom: 1px solid #ccc; vertical-align: top;">
@@ -42,6 +43,16 @@
             <td><a class="btn btn-large" href="#">Large</a></td>
             <td>
                 <pre style="margin: 0;">&lt;a class="btn btn-large" href="#"&gt;Large&lt;/a&gt;</pre>
+            </td>
+        </tr>
+         <tr>
+            <td style="text-align: right;" colspan="2"><a class="btn btn-mini btn-secondary" href="#Top">Terug naar boven</a></td>
+        </tr>
+
+        <!-- Buttons: styling -->
+        <tr style="border-bottom: 1px solid #ccc; vertical-align: top;">
+            <td colspan="2">
+                <h2 id="Button_styling" style="padding-top: 20px; margin-top: 40px;">Buttons: styling</h2>
             </td>
         </tr>
         <tr style="border-bottom: 1px solid #ccc; vertical-align: top;">
@@ -187,13 +198,14 @@
                 </ul>
             </td>
             <td style="vertical-align: top; border-bottom: 1px solid #ccc; padding: 16px;">
-                <pre>&lt;h2&gt;Table of Contents&lt;/h2&gt;
-                        &lt;ul&gt;
-                        &lt;li&gt;&lt;a href="#section_1"&gt;Section 1&lt;/a&gt;&lt;/li&gt;
-                        &lt;li&gt;&lt;a href="#section_2"&gt;Section 2&lt;/a&gt;&lt;/li&gt;
-                        &lt;li&gt;&lt;a href="#section_3"&gt;Section 3&lt;/a&gt;&lt;/li&gt;
-                        &lt;/ul&gt;
-                </pre>
+                <pre>
+&lt;h2&gt;Table of Contents&lt;/h2&gt;
+&lt;ul&gt;
+    &lt;li&gt;&lt;a href="#section_1"&gt;Section 1&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href="#section_2"&gt;Section 2&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href="#section_3"&gt;Section 3&lt;/a&gt;&lt;/li&gt;
+&lt;/ul&gt;
+</pre>
             </td>
         </tr>
         <tr>
@@ -202,9 +214,12 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </td>
             <td style="vertical-align: top; border-bottom: 1px solid #ccc; padding: 16px;">
-                <pre>&lt;h2 id="section_1"&gt;Section 1&lt;/h2&gt;
-                    &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lt;/p&gt;
-                </pre>
+                <pre>
+&lt;h2 id="section_1"&gt;Section 1&lt;/h2&gt;
+&lt;p&gt;
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+&lt;/p&gt;
+</pre>
             </td>
         </tr>
         <tr>
@@ -213,9 +228,13 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </td>
             <td style="vertical-align: top; border-bottom: 1px solid #ccc; padding: 16px;">
-                <pre>&lt;h2 id="section_2"&gt;Section 2&lt;/h2&gt;
-                    &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lt;/p&gt;
-                </pre>
+<pre>
+&lt;h2 id="section_2"&gt;Section 2&lt;/h2&gt;
+&lt;p&gt;
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+&lt;/p&gt;
+</pre>
+
             </td>
         </tr>
         <tr>
@@ -224,9 +243,13 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </td>
             <td style="vertical-align: top; border-bottom: 1px solid #ccc; padding: 16px;">
-                <pre>&lt;h2 id="section_3"&gt;Section 3&lt;/h2&gt;
-                    &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lt;/p&gt;
-                </pre>
+<pre>
+&lt;h2 id="section_3"&gt;Section 3&lt;/h2&gt;
+&lt;p&gt;
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+&lt;/p&gt;
+</pre>
+
             </td>
         </tr>
         <tr>
