--- a/Training/shadow_box.html
+++ b/Training/shadow_box.html
@@ -1,3 +1,5 @@
+<p>&nbsp;</p>
+
 <div style="margin: 50px 15% 50px 15%; background-color: #cccccc;">
     <div style="position: relative; top: -20px; left: -20px; padding: 20px; background: #ffffff; border: 2px solid #cccccc;">
     <!-- Place your content below --->
@@ -6,6 +8,14 @@
     </div>
 </div>
 
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
