--- a/Training/grid_system_code.html
+++ b/Training/grid_system_code.html
@@ -1,5 +1,6 @@
 <!-- Rij 1 -->
 <div class="grid-row" style="gap:20px; align-items: stretch; margin: 0">
+    <!-- Box 1 -->
     <div class="col-xs-12 col-md-12 content-box border-bottom border border-trbl border-round" style="flex:1; background-color: #ffefef; border-color: #bc0031; padding: 20px;">       
         <h3 style="color: #c71f23;">At alias ipsam in tempore maiores ea quidem dolor.</h3>
         <p>Eum eveniet molestiae in fugiat illum ut unde molestiae eum autem expedita et corporis officia. Aut pariatur voluptas eum similique omnis sed rerum officia. Sed laudantium quae ut omnis dolore hic aspernatur pariatur et quaerat voluptatem est tempora natus. Est magni deleniti sed consequatur harum et explicabo modi? At praesentium debitis ut illum quam quo sunt fugit non voluptatem corrupti qui impedit perspiciatis.</p>
@@ -8,20 +9,29 @@
 
 <!-- Rij 2 -->
 <div class="grid-row" style="gap:20px; align-items: stretch; margin: 0">
-    <div class="col-xs-12 col-md-6 col-lg-6 content-box border-bottom border border-trbl border-round" style="flex:1; background-color: #ffffff; border-color: #bc0031; padding: 20px; margin-top: 5px;">
+
+    <!-- Box 1 -->
+    <!-- "flex:1;" zodat de boxes even lang blijven ongeacht de lengte van de tekst-->
+    <div class="col-xs-12 col-md-6 content-box border-bottom border border-trbl border-round" style="flex:1; background-color: #ffffff; border-color: #bc0031; padding: 20px; margin-top: 5px;">
         <p>Eum eveniet molestiae in fugiat illum ut unde molestiae eum autem expedita et corporis officia. Aut pariatur voluptas eum similique omnis sed rerum officia. Sed laudantium quae ut omnis dolore hic aspernatur pariatur et quaerat voluptatem est tempora natus. Est magni deleniti sed consequatur harum et explicabo modi? At praesentium debitis ut illum quam quo sunt fugit non voluptatem corrupti qui impedit perspiciatis.</p>
     </div>
+
+    <!-- Box 2 -->
     <div class="col-xs-12 col-md-6 col-lg-6 content-box border-bottom border border-trbl border-round" style="flex:1; background-color: #ffffff; border-color: #bc0031; padding: 20px; margin-top: 5px; ">
         <p>Ab fugiat veritatis ut sunt cumque qui quas excepturi qui porro laboriosam aut inventore recusandae ad dolore error. Qui quidem eveniet et cupiditate omnis qui quod delectus est libero quae sed nulla laborum et atque laudantium sit incidunt sint. Sed facilis accusantium et quae autem in inventore voluptas a possimus labore.</p>
     </div>
 </div>
 
 <!-- Rij 3 -->
-<div class="grid-row" style="gap:20px;align-items: stretch; margin: 0">
-    <div class="col-xs-12 col-md-6 col-lg-6 content-box border border-trbl border-round" style="flex:1; background-color: #ffffff; border-color: #bc0031; padding: 20px; margin-top: 5px;">
+<div class="grid-row" style="gap:20px; align-items: stretch; margin: 0">
+    
+    <!-- Box 1 -->
+    <div class="col-xs-12 col-md-6 content-box border border-trbl border-round" style="flex:1; background-color: #ffffff; border-color: #bc0031; padding: 20px; margin-top: 5px;">
         <p>Sed sunt nihil et voluptatibus doloribus sed dolorem fuga. In veritatis incidunt non voluptas natus et quaerat consectetur ut eveniet voluptatem non placeat libero id doloremque corrupti et temporibus dolor. Qui omnis quaerat et voluptate rerum rem nulla alias nam voluptatem maxime non corrupti veritatis ut dolor quas. Qui doloribus laboriosam et voluptas quisquam et enim corrupti non corporis aliquam ut natus ratione qui repudiandae nihil vel deserunt ipsum.</p>
     </div>
-   <div class="col-xs-12 col-md-6 col-lg-6 content-box border-bottom border border-trbl border-round" style="flex:1; padding: 20px; margin-top: 5px; border-color:transparent;background-color: transparent;"></div>
+
+    <!-- Box 2 (nu nog onzichtbaar) -->
+    <div class="col-xs-12 col-md-6 content-box border-bottom border border-trbl border-round" style="flex:1; padding: 20px; margin-top: 5px; border-color:transparent;background-color: transparent;"></div>
 </div>
         
 <p>&nbsp;</p>
