--- a/Training/cheatsheet.html
+++ b/Training/cheatsheet.html
@@ -9,11 +9,12 @@
     <li><a href="#Icons">Icons</a></li>
     <li><a href="#Links">Links</a></li>
     <li><a href="#Anchor">Anchor links</a></li>
-    <li><a href="#Grid">Grid-row</a></li>
+    <li><a href="#Grid">Grid-system</a></li>
     <li><a href="#Toggle">Toggle</a></li>
     <li><a href="#Popup">Pop-up box</a></li>
     <li><a href="#Image">Images</a></li>
-
+    <li><a target="_blank" rel="noopener" href="https://llu.instructure.com/courses/1131728/pages/html-shadow-text-box">Shadow box</a></li>
+    <li><a target="_blank" rel="noopener" href="https://llu.instructure.com/courses/1131728/pages/html-content-tabs">Content tabs</a></li>
 </ul>
 
 <!-- Cheatsheet -->
@@ -264,7 +265,7 @@
         <!-- Grid -->
         <tr style="border-bottom: 1px solid #ccc; vertical-align: top;">
             <td colspan="2">
-                <h2 id="Grid" style="padding-top: 20px; margin-top: 40px;">Grid-row</h2>
+                <h2 id="Grid" style="padding-top: 20px; margin-top: 40px;">Grid-system</h2>
             </td>
         </tr>
         <tr>
